rns-lang/test_data/integration/error/parser/outside_class_directive/super_keyword.rns
; some comment
; another comment
super
.class public HelloWorld
